--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "egg": "^2.15.1",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
-    "egg-view-ejs": "^2.0.0",
-    "egg-view-nunjucks": "^2.2.0"
+    "egg-view-ejs": "^2.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -32,7 +31,7 @@
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.1",
     "eslint-config-ali": "^5.0.1",
     "eslint-config-egg": "^7.1.0",
     "eslint-plugin-babel": "^5.3.0",
